@@ -41,11 +41,6 @@ MAIN GOAL for 0.6.0:
 
    [ ]	STEP EXECUTIONS, REVERSE EXECUTION, SNAPSHOTTING, ...
 
-	[ ]  The root component should be a specific component type, which has
-	     emulation-wide settings, such as "step"!
-	[ ]  Remove the step/time concepts from the GXemul class.
-	[ ]  Change the status command to show the root component's step.
-
 	Single-stepping should probably print the shortest possible part of the
 	component name, followed by the component's single-step printout
 	(verbose single-step debug messages).
